##

# ------------------------------------------------------------------------------
# GENERAL OPTIONS
# ------------------------------------------------------------------------------

add_subdirectory(cfginterface)
add_subdirectory(projectcfg)
add_subdirectory(projectdlg)
add_subdirectory(disasmdlg)