##

# ------------------------------------------------------------------------------
# GENERAL OPTIONS
# ------------------------------------------------------------------------------

add_subdirectory(cfginterface)
add_subdirectory(projectcfg)
add_subdirectory(interfacecfg)
add_subdirectory(projectdlg)
add_subdirectory(disasmdlg)
add_subdirectory(translatordlg)
add_subdirectory(fileconvertdlg)
add_subdirectory(TrialExpired)